# beeclock

./: .gitignore  LICENSE  README.md
crates/: README.md
crates/beeclock-core/: Cargo.toml
crates/beeclock-core/src/: clock.rs  condition.rs  error.rs  lib.rs  partition.rs  pulse.rs  snapshot.rs  subscriber.rs
crates/beeclock-wasm/: Cargo.toml
crates/beeclock-wasm/src/: bridge.rs  builder.rs  clock.rs  lib.rs
docs/: api-reference.md  applications.md  clock.md  treatise-fixed-timestep.md  treatise-rust-wasm.md  whitepaper.md
jumpRope/: GAME_DESIGN_DOCUMENT.md  ntorowa-jump-rope-game.jsx
ngclock/: README.md  angular.json  package-lock.json  package.json
ngclock/src/: index.html  main.ts  styles.scss
ngclock/src/app/: app.config.ts  app.spec.ts  bee-app.ts
ngclock/src/app/core/clock/: clock.spec.ts  clock.ts
ngclock/src/app/core/engine/: engine.spec.ts  engine.ts
ngclock/src/app/core/framework/: README.md  create-app.ts  emergent.ts  index.ts  types.ts
ngclock/src/app/core/framework/examples/: bouncing-balls.ts  index.ts  particle-system.ts
ngclock/src/app/core/framework/scenes/: about-scene.ts  home-scene.ts  index.ts  lab-scene.ts  layout.ts  nav-bar.ts  types.ts
ngclock/src/app/core/renderer/: animated-loader.ts  canvas-renderer.ts  clock-canvas.ts  clock-skin.ts  loader-canvas.ts  three-renderer.ts
ngclock/src/app/core/wasm/: wasm.spec.ts  wasm.ts
ngclock/src/app/scenes/: index.ts
ngclock/src/assets/wasm/: beeclock_wasm.js  beeclock_wasm_bg.wasm
scripts/: build-wasm.sh
web/: README.md  index.html  main.js  style.css
(+11 files in other folders)
