[package]
name = "beeclock-wasm"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "WASM bindings for beeclock-core"
repository = "https://github.com/obiverse/beeclock"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
beeclock-core = { path = "../beeclock-core", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"

[features]
default = []
